<resources>
    <string name="app_name">TakeAndGoUser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="creditCard">Credit card</string>
    <string name="birthday">birthday</string>
    <string name="Email">Email</string>
    <string name="phoneNumber">Phone</string>
    <string name="lastName">Last name</string>
    <string name="firsName">First name</string>
    <string name="clientId">Id</string>
    <string name="pick_date">Pick date</string>
    <string name="AddClient">Add client</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait_while_loading" />
    <string name="how_much_did_you_pay_for_gas" />
    <string name="did_you_add_gas" />
    <string name="how_many_kilometers_did_you_drive" />
</resources>
